--- a/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.scss
@@ -11,7 +11,7 @@
   border: 0px;
   height: 25px;
   outline: none;
-  color: #106DB6;
+  //color: #106DB6;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
