--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -94,7 +94,7 @@
                   <input type="checkbox" [value]="1" [(ngModel)]="d.is_otp">
                   <span class="label text-color">OTP</span>
                 </div>
-                <div class="participants__name">
+                <div *ngIf="getOtp(d)" class="participants__name">
                   <div class="label text-color">{{'user.phone' | translate}}: <span *ngIf="d.is_otp" class="required-title">*</span></div>
                   <input type="number" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                 </div>
