edit code determine

--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -421,9 +421,8 @@
                     </div>
                   </div>
                   <div class="participants--input select-text-input" style="display: flex">
-                    <div class="participants__name">
+                    <div class="participants__name" [ngStyle]="getStyleSignature(d)">
                       <div class="label text-color">{{'user.sign-type' | translate}}: <span class="required-title">*</span></div>
-
                       <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
                                                [settings]="dropdownSignTypeSettings" [data]="signTypeList">
                         <ng-template #optionsTemplate let-item let-option="option"
@@ -442,7 +441,7 @@
                       <input type="checkbox" [value]="1" [(ngModel)]="d.is_otp">
                       <span class="label text-color">OTP</span>
                     </div>
-                    <div class="participants__name">
+                    <div *ngIf="getOtp(d)" class="participants__name">
                       <div class="label text-color">{{'user.phone' | translate}}: <span *ngIf="d.is_otp" class="required-title">*</span></div>
                       <input type="number" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                     </div>
