--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
@@ -473,11 +473,11 @@
 </div>
 
 <div class="footer-determine" style="display: flex; justify-content: space-between">
-<!--  <div style="width: 200px;">-->
-<!--    <button (click)="back($event, 'infor-contract')" type="button" name="next" class="next action-button"-->
-<!--            style="background-color: #8B8B8B">{{'btn.previous' | translate}}-->
-<!--    </button>-->
-<!--  </div>-->
+  <div style="width: 200px;">
+    <button (click)="back($event, 'infor-coordination')" type="button" name="next" class="next action-button"
+            style="background-color: #8B8B8B">{{'btn.previous' | translate}}
+    </button>
+  </div>
   <div class="content_footer">@Copyright 2021 - MobiFone</div>
   <div>
     <button type="button" name="next" class="next draft-button">{{'btn.save-draff' | translate }}</button>
