--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
@@ -3,7 +3,7 @@
   <!--  information contract-->
   <div class="col-md-3 sample-contract__information" style="background-color: white; z-index: 10">
     <div class="sample-contract__information--drag" id="width-element-info" style="position: relative">
-      <div style="padding-bottom: 10px" class="label">CÁC THÀNH PHẦN (<span style="color: red">KÉO THẢ</span>)</div>
+      <label style="padding-bottom: 10px" class="label">CÁC THÀNH PHẦN (<span style="color: red">KÉO THẢ</span>)</label>
       <!--      <div>-->
       <div *ngFor="let d of this.datas.contract_user_sign" class="show-list-name-class"
            style="display: inline-block; margin-bottom: 15px">
@@ -32,7 +32,7 @@
         <label class="label">THUỘC TÍNH</label>
         <div class="name-text" *ngIf="isEnableText">
           <label class="label-require">Tên trường: *</label>
-          <input id="text-input-element" type="text" [ngModel]="this.objSignInfo.text_attribute_name" (ngModelChange)="changePositionSign($event, 'text_attribute_name', 'text')" [disabled]="disableText(this.objSignInfo)">
+          <input id="text-input-element" type="text" [ngModel]="this.objSignInfo.text_attribute_name" (ngModelChange)="changePositionSign($event, 'text_attribute_name', 'text')">
         </div>
         <div class="sign-unit-select">
           <label class="label-require">{{isEnableText || isChangeText ? "Người nhập" : "Người ký"}}: *</label>
@@ -49,11 +49,11 @@
         <div class="location">
           <div class="location-drag">
             <div class="label" style="text-align: center">X:</div>
-            <input type="number" (ngModelChange)="changePositionSign($event, 'x', 'location')" [ngModel]="getTrafX()" [readOnly]="isEnableSelect">
+            <input type="number" (ngModelChange)="changePositionSign($event, 'x', 'location')" [ngModel]="getTrafX()" [readOnly]="false">
           </div>
           <div class="location-drag">
             <div class="label" style="text-align: center">Y:</div>
-            <input type="number" (ngModelChange)="changePositionSign($event, 'y', 'location')" [ngModel]="getTrafY()" [readOnly]="isEnableSelect">
+            <input type="number" (ngModelChange)="changePositionSign($event, 'y', 'location')" [ngModel]="getTrafY()" [readOnly]="false">
           </div>
         </div>
       </div>
@@ -63,11 +63,11 @@
         <div class="location">
           <div class="location-drag">
             <div class="label">Chiều dài</div>
-            <input type="number" (ngModelChange)="changePositionSign($event, 'width', 'size')" [ngModel]="objSignInfo.offsetWidth" [readOnly]="isEnableSelect">
+            <input type="number" (ngModelChange)="changePositionSign($event, 'width', 'size')" [ngModel]="objSignInfo.width" [readOnly]="false">
           </div>
           <div class="location-drag">
             <div class="label">Chiều rộng</div>
-            <input type="number" (ngModelChange)="changePositionSign($event, 'height', 'size')" [ngModel]="objSignInfo.offsetHeight" [readOnly]="isEnableSelect">
+            <input type="number" (ngModelChange)="changePositionSign($event, 'height', 'size')" [ngModel]="objSignInfo.height" [readOnly]="false">
           </div>
         </div>
       </div>
@@ -78,22 +78,21 @@
   <div class="col-md-9 sample-contract__file viewer-pdf isDrag" style="background-color: #f3f7f9; position: relative">
     <div id="pdf-viewer-step-3">
       <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
-        <div
+        <div class="resize-drag not-out-drop"
              [id]="d.id"
              style="z-index: -1"
              #itemElement
              (click)="getSignSelect(d)"
-             [ngClass]="getContractSign(d)"
+             [ngClass]="changeColorDrag(null,true)"
              [ngStyle]="changePosition(d)">
           <div class="name-sig-img-daky">{{d.name ? d.name : ''}}</div>
-          <div *ngIf="d.signature_party != 'organization' || !d.position" class="sig-img-daky" (click)="onCancel($event, d)">
+          <div class="sig-img-daky" (click)="onCancel($event, d)">
             <img src="assets/img/clear.svg" alt="">
             <img src="assets/img/border-clear.svg" alt="">
           </div>
           <app-sign-contract [datas]="datas" [sign]="d"></app-sign-contract>
         </div>
       </div>
-
     </div>
   </div>
 </div>
@@ -101,6 +100,7 @@
   <button (click)="back($event, 'determine-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>
   <div class="content_footer">@Copyright 2021 - MobiFone</div>
   <div>
+    <button type="button" name="saveDocument" class="next action-button" style="background-color: #FCAF17">Lưu nháp</button>
     <button (click)="next()" type="button" name="next" class="next action-button">Tiếp theo</button>
   </div>
 </div>
