--- a/src/app/main/contract/detail-contract/detail-contract.component.html
+++ b/src/app/main/contract/detail-contract/detail-contract.component.html
@@ -18,6 +18,9 @@
         </div>
         <div>
           <span class="title-contract">File đính kèm:</span>
+          <span *ngFor="let d of allFileAttachment">
+            <a style="color: #106DB6" rel="stylesheet" [href]="d.path" target="_blank">{{d.filename}}</a>
+          </span>
         </div>
         <div>
           <span class="title-contract">Hợp đồng liên quan:</span>
