--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/confirm-info-contract/confirm-info-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/confirm-info-contract/confirm-info-contract.component.html
@@ -39,7 +39,7 @@
 <div class="labelOrg">CÁC BÊN KÝ</div>
 <div class="determine_contact">
   <div class="user_contact">
-    <div class="label">CÔNG TY TNHH ABC</div>
+    <div class="label">TỔ CHỨC CỦA TÔI</div>
     <div class="content_determine">
       <div class="row">
         <div class="col-md-5">
@@ -123,12 +123,11 @@
   <div style="width: 200px;">
     <button (click)="back($event, 'sample-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>
   </div>
-<!--  <div class="content_footer"></div>-->
-<!--  <div>-->
-<!--    <button type="button" name="next" class="next draft-button">Lưu nháp</button>-->
-<!--    <button (click)="next()" type="button" name="next" class="next action-button pull-right">Tiếp theo</button>-->
-<!--  </div>-->
-  <button style="width: 300px; height: 40px; border-radius: 5px" type="button" name="next" class="next action-button " (click)="confirmContract()">Xác nhận và gửi hợp đồng</button>
+  <div class="content_footer"></div>
+  <div>
+    <button type="button" name="next" class="next draft-button">Lưu nháp</button>
+    <button (click)="next()" type="button" name="next" class="next action-button pull-right">Hoàn thành</button>
+  </div>
 </div>
 
 
