--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/confirm-info-contract/confirm-info-contract.component.scss
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/confirm-info-contract/confirm-info-contract.component.scss
@@ -43,7 +43,7 @@
 
 .footer-infor-contract {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   .content_footer{
     //text-align: center;
