edit menu - o text

--- a/src/app/main/unit/add-unit/add-unit.component.html
+++ b/src/app/main/unit/add-unit/add-unit.component.html
@@ -69,11 +69,11 @@
             <div class="col-md-6" style="align-self: center;">
                 <div class="row">
                     <div class="col-md-5">
-                        <input type="radio" name="confirm-radio-consider" [value]="1" formControlName="status">
+                        <input type="radio" name="confirm-radio-consider" [value]="1" formControlName="status" name="status">
                         <span> Hoạt động</span>
                     </div>
                     <div class="col-md-7">
-                        <input type="radio" name='confirm-radio-consider' [value]="2" formControlName="status">
+                        <input type="radio" name='confirm-radio-consider' [value]="2" formControlName="status" name="status">
                         <span> Không hoạt động</span>
                     </div>
                 </div>
