--- a/src/app/main/contract/detail-contract/image-sign-contract/image-sign-contract.component.html
+++ b/src/app/main/contract/detail-contract/image-sign-contract/image-sign-contract.component.html
@@ -14,10 +14,10 @@
 
 <div class="text-sign" *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'">
   <!--  <input id="input-text" type="text" [placeholder]="sign.sign_unit == 'text' ? 'Nhập text' : 'Nhập số tài liệu'">-->
-  <div class="skeleton-sign"  *ngIf="!checkShowEdit">
+  <div class="skeleton-sign"  *ngIf="!checkShowEdit && !sign.value">
     <span id="input-text" [ngbTooltip]="sign.value ? sign.value : ''">{{sign.value ? sign.value : ((sign.sign_unit == 'text') ? 'Text' : 'Số tài liệu')}}</span>
   </div>
-  <div class="skeleton-sign" *ngIf="checkShowEdit">
+  <div class="skeleton-sign" *ngIf="checkShowEdit && !sign.value">
     <input type="text" class="input-edit-text" [(ngModel)]="sign.value" (blur)="doneEditTextSign()" #inputEditText>
   </div>
 </div>
