--- a/src/app/main/unit/unit.component.scss
+++ b/src/app/main/unit/unit.component.scss
@@ -19,3 +19,84 @@
 .btn_search{
     align-self: flex-end;
 }
+
+#table {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  #table td, #table th {
+    //border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
+  #table tr:nth-child(even){background-color: #f2f2f2;}
+  
+  #table tr:hover {background-color: #ddd;}
+  
+  #table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: center;
+    background-color: #E2ECF6;
+    color: #106DB6;
+  }
+
+  :host ::ng-deep {
+    .ngx-pagination {
+      padding: 0;
+    }
+    .ngx-pagination a, .ngx-pagination button {
+      text-decoration: none;
+      background: #f3f3f3;
+    }
+    .ngx-pagination li {
+      width: 50px;
+      border-radius: 5px;
+    }
+    .ngx-pagination .pagination-previous a::before,
+    .ngx-pagination .pagination-previous.disabled::before {
+      font-family: 'Material Icons';
+      content: 'keyboard_arrow_left';
+      vertical-align: middle;
+      display: inline;
+      margin: 0;
+    }
+    .ngx-pagination .pagination-next a::after,
+    .ngx-pagination .pagination-next.disabled::after {
+      font-family: 'Material Icons';
+      content: 'keyboard_arrow_right';
+      vertical-align: middle;
+      display: inline;
+      margin: 0;
+    }
+  
+    .nav-link.active {
+      color: #0d6efd;
+      font-weight: 500;
+      background-color: #c5ebff;
+    }
+    .nav-link {
+      color: #6c6c6d;
+    }
+  }
+  
+  .fa_icon{
+    font-size: 17px;
+    cursor: pointer;
+  }
+  .contract_footer{
+    padding-top: 10px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .footer_title{
+    width: 120px;
+  }
+  .footer_pagination{
+    text-align: center;
+  }
+  .footer_page_number{
+    color: #0160AE
+  }
+  
