--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -44,7 +44,7 @@
     <div class="contract_footer">
       <div class="footer_title"></div>
       <div class="footer_pagination">
-        <pagination-controls *ngIf="files.length > 0;" (pageChange)="p=$event; setPage()" previousLabel="" nextLabel=""></pagination-controls>
+        <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; setPage()" previousLabel="" nextLabel=""></pagination-controls>
       </div>
       <div class="footer_page_number">{{'chart.number' | translate}}: {{pageStart}} - {{pageEnd}} / {{pageTotal}}</div>
     </div>
