--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -23,7 +23,7 @@
 
         <div class="row" style="padding-top: 10px;">
             <div class="col-md-6">
-                <div class="label text-color">Số điện thoại</div>
+                <div class="label text-color">Số điện thoại <span class="required-title">*</span></div>
                 <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
                     <input type="text" formControlName="phone" autofocus>
@@ -32,16 +32,19 @@
         
             <div class="col-md-6">
                 <div class="label text-color">Ngày sinh</div>
+                <!-- <div class="input-group">
+                    <ngx-datepicker formControlName="birthday" [options]="options" class="date-picker"></ngx-datepicker>
+                    <img src="assets/img/db_calendar.svg" class="input-img-calendar">
+                </div> -->
                 <div class="input-data">
-                    <img src="assets/img/login_email.svg" class="input-img">
-                    <input type="text" formControlName="birthday">
+                    <input type="date" min="17/12/2021" pattern="\d{2}/\d{2}/\d{4}" formControlName="birthday">
                 </div>
             </div>
         </div>
 
         <div class="row" style="padding-top: 10px;">
             <div class="col-md-6">
-                <div class="label text-color">Tổ chức</div>
+                <div class="label text-color">Tổ chức <span class="required-title">*</span></div>
                 <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
                     <input type="text" formControlName="organizationId" autofocus>
@@ -49,7 +52,7 @@
             </div>
         
             <div class="col-md-6">
-                <div class="label text-color">Vai trò</div>
+                <div class="label text-color">Vai trò <span class="required-title">*</span></div>
                 <div class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img">
                     <input type="text" formControlName="role">
