detail user, unit

--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -32,12 +32,8 @@
         
             <div class="col-md-6">
                 <div class="label text-color">Ngày sinh</div>
-                <!-- <div class="input-group">
-                    <ngx-datepicker formControlName="birthday" [options]="options" class="date-picker"></ngx-datepicker>
-                    <img src="assets/img/db_calendar.svg" class="input-img-calendar">
-                </div> -->
                 <div class="input-data">
-                    <input type="date" min="17/12/2021" pattern="\d{2}/\d{2}/\d{4}" formControlName="birthday">
+                    <input type="date" formControlName="birthday">
                 </div>
             </div>
         </div>
