--- a/src/app/main/unit/add-unit/add-unit.component.html
+++ b/src/app/main/unit/add-unit/add-unit.component.html
@@ -15,7 +15,7 @@
             <div class="col-md-6">
                 <div class="label text-color">Tên viết tắt <span class="required-title">*</span></div>
                 <div class="input-data">
-                    <img src="assets/img/login_email.svg" class="input-img">
+                    <img src="assets/img/icon_name.svg" class="input-img">
                     <input type="text" formControlName="short_name">
                 </div>
             </div>
@@ -33,7 +33,7 @@
             <div class="col-md-6">
                 <div class="label text-color">Địa chỉ email <span class="required-title">*</span></div>
                 <div class="input-data">
-                    <img src="assets/img/login_email.svg" class="input-img">
+                    <img src="assets/img/icon_name.svg" class="input-img">
                     <input type="text" formControlName="email">
                 </div>
             </div>
@@ -51,7 +51,7 @@
             <div class="col-md-6">
                 <div class="label text-color">Số điện thoại <span class="required-title">*</span></div>
                 <div class="input-data">
-                    <img src="assets/img/login_email.svg" class="input-img">
+                    <img src="assets/img/icon_name.svg" class="input-img">
                     <input type="text" formControlName="phone">
                 </div>
             </div>
